--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.6.2",
+    "@material-ui/core": "^4.10.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "moment": "^2.26.0",
     "react": "^16.13.1",
+    "react-datepicker": "^2.16.0",
     "react-dom": "^16.13.1",
+    "react-inline-editing": "^1.0.10",
     "react-scripts": "3.4.1"
   },
   "scripts": {
